FIX | GUI - buguer menu position aligned station-name (2)

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -272,12 +272,12 @@ nav {
   }
 
   .burguer {
-      margin: 0 auto;
-      top: 50%;
-      display: flex;
-      flex-direction: column;
-      flex-flow: row-reverse;  
-    }
+    margin: 0 auto;
+    top: 50%;
+    display: flex;
+    flex-direction: column;
+    flex-flow: row-reverse;
+  }
 
   .nav-frequency {
     position: absolute;
@@ -490,7 +490,7 @@ input:checked+.slider:before {
 
 .icon {
   img {
-    height: 1.2em;
+    height: 1em;
     position: relative;
     top: 5px;
   }
